<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>org.icatproject</groupId>
	<artifactId>topcat</artifactId>
	<packaging>war</packaging>
	<version>2.4.10-SNAPSHOT</version>
	<name>TopCAT</name>
	<description>Web frontend for multiple ICATs</description>

	<build>

		<extensions>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-webdav-jackrabbit</artifactId>
				<version>2.10</version>
			</extension>
		</extensions>

		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.5.1</version>
				<inherited>true</inherited>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.github.trecloux</groupId>
				<artifactId>yeoman-maven-plugin</artifactId>
				<version>0.5</version>
				<configuration>
					<skipTests>true</skipTests>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>build</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>1.7</version>
				<executions>
					<execution>
						<id>copy</id>
						<phase>validate</phase>
						<configuration>
							<target>
								<copy file="${basedir}/yo/app/config/topcat.json.example" tofile="${project.build.directory}/topcat.json.example" />
								<copy file="${basedir}/yo/app/languages/lang.json.example" tofile="${project.build.directory}/lang.json.example" />
								<copy file="${basedir}/yo/app/styles/topcat.css" tofile="${project.build.directory}/topcat.css.example" />
							</target>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<webResources>
						<resource>
							<directory>yo/dist</directory>
							<excludes>
								<exclude>**/config/*.json</exclude>
								<exclude>**/config/*.example</exclude>
								<exclude>**/languages/*.json</exclude>
								<exclude>**/languages/*.example</exclude>
							</excludes>
						</resource>
					</webResources>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.4</version>
				<inherited>false</inherited>
				<configuration>
					<descriptors>
						<descriptor>${basedir}/src/assemble/distribution.xml</descriptor>
					</descriptors>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<filesets>
						<fileset>
							<directory>yo/dist</directory>
						</fileset>
						<fileset>
							<directory>yo/.tmp</directory>
						</fileset>
						<!-- <fileset> <directory>yo/node_modules</directory> </fileset> -->
					</filesets>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.4</version>
				<dependencies>
					<dependency><!-- add support for ssh/scp -->
						<groupId>org.apache.maven.wagon</groupId>
						<artifactId>wagon-ssh</artifactId>
						<version>2.10</version>
					</dependency>
				</dependencies>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5.3</version>
				<configuration>
					<tagNameFormat>v@{project.version}</tagNameFormat>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.7</version>
				<dependencies>
					<dependency><!-- add support for ssh/scp -->
						<groupId>org.apache.maven.wagon</groupId>
						<artifactId>wagon-ssh</artifactId>
						<version>2.10</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>com.qmino</groupId>
				<artifactId>miredot-plugin</artifactId>
				<version>2.1.2</version>
				<executions>
					<execution>
						<goals>
							<goal>restdoc</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<licence>cHJvamVjdHxvcmcuaWNhdHByb2plY3QudG9wY2F0fDIwMjYtMDUtMTh8ZmFsc2V8LTEjTUN3Q0ZFRERHS042anNQVUZpOW80Wjdvc2VsVU50djBBaFFvd3lOU0UzWURiSHJmQVluZ0tpeWltbXl3QkE9PQ==</licence>
					<output>
						<html>
							<location>site/miredot</location>
							<baseUrl>https://example.com/topcat</baseUrl>
						</html>
					</output>
					<!-- apply for spring mvc support <restModel> <restFramework> <name>spring-mvc</name> 
						</restFramework> </restModel> -->
					<!-- insert other configuration here (optional) -->
				</configuration>
			</plugin>
			<plugin>
	            <groupId>com.phasebash.jsdoc</groupId>
	            <artifactId>jsdoc3-maven-plugin</artifactId>
	            <version>1.2.0</version>
	            <configuration>
	                <recursive>true</recursive>
	                <directoryRoots>
	                    <directoryRoot>${basedir}/yo/app/scripts</directoryRoot>
	                </directoryRoots>
	                <configFile>${basedir}/yo/jsdoc/conf.json</configFile>
	            </configuration>
	        </plugin>

	        <plugin>
			    <groupId>org.apache.cxf</groupId>
			    <artifactId>cxf-codegen-plugin</artifactId>
			    <version>3.1.11</version>
			    <dependencies>
			        <dependency>
			            <groupId>xerces</groupId>
			            <artifactId>xercesImpl</artifactId>
			            <version>2.8.1</version>
			        </dependency>
			    </dependencies>
			</plugin>
		</plugins>
	</build>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.jboss.arquillian</groupId>
				<artifactId>arquillian-bom</artifactId>
				<version>1.0.3.Final</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>javax</groupId>
			<artifactId>javaee-api</artifactId>
			<version>7.0</version>
		</dependency>
		<dependency>
			<!-- JSON-B API from JavaEE 8, which gives the @JsonbTransient annotation required for Payara 5 -->
			<groupId>javax.json.bind</groupId>
			<artifactId>javax.json.bind-api</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
		     <groupId>javax.websocket</groupId>
		     <artifactId>javax.websocket-api</artifactId>
		     <version>1.1</version>
		     <scope>provided</scope>
		 </dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.1.3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>4.0</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.arquillian.junit</groupId>
			<artifactId>arquillian-junit-container</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.arquillian.extension</groupId>
			<artifactId>arquillian-persistence-dbunit</artifactId>
			<version>1.0.0.Alpha7</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.jayway.restassured</groupId>
			<artifactId>rest-assured</artifactId>
			<version>2.4.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>mysql</groupId>
		    <artifactId>mysql-connector-java</artifactId>
		    <version>6.0.5</version>
		    <scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.samaxes.filter</groupId>
			<artifactId>cachefilter</artifactId>
			<version>2.3.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.4</version>
		</dependency>
		<dependency>
			<groupId>commons-validator</groupId>
			<artifactId>commons-validator</artifactId>
			<version>1.4.1</version>
		</dependency>
		<dependency>
			<groupId>org.icatproject</groupId>
			<artifactId>icat.utils</artifactId>
			<version>4.15.1</version>
		</dependency>
		<dependency>
		    <groupId>com.phasebash.jsdoc</groupId>
		    <artifactId>jsdoc3-maven-plugin</artifactId>
		    <version>1.2.0</version>
		    <scope>test</scope>
		</dependency>

	</dependencies>

	<profiles>
		<profile>
			<id>arquillian-glassfish-embedded</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<dependencies>
				<dependency>
					<groupId>org.jboss.arquillian.container</groupId>
					<artifactId>arquillian-glassfish-embedded-3.1</artifactId>
					<version>1.0.0.CR3</version>
					<scope>test</scope>
				</dependency>
				<dependency>
					<groupId>org.glassfish.main.extras</groupId>
					<artifactId>glassfish-embedded-all</artifactId>
					<version>4.0</version>
					<scope>provided</scope>
				</dependency>
				<!-- Enable dependency if you want to use H2 -->
				<!-- Also update glassfish-resources.xml to use H2 connection information -->
				<!-- <dependency> <groupId>com.h2database</groupId> <artifactId>h2</artifactId> 
					<version>1.3.166</version> <scope>test</scope> </dependency> -->
			</dependencies>
			<build>
				<testResources>
					<testResource>
						<directory>src/test/resources</directory>
					</testResource>
					<testResource>
						<directory>src/test/resources-glassfish-embedded</directory>
					</testResource>
				</testResources>
				<plugins>
					<!-- The surefire plugin is configured to pass a system property to 
						GlassFish to retarget the derby log file -->
					<plugin>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.19.1</version>
						<configuration>
							<!-- TODO remove next line -->
							<!-- <skipTests>true</skipTests> -->
							<argLine>-Xmx768m -XX:MaxPermSize=256m</argLine>
							<systemPropertyVariables>
								<java.util.logging.config.file>
									${project.build.testOutputDirectory}/logging.properties
								</java.util.logging.config.file>
								<derby.stream.error.file>
									${project.build.directory}/derby.log
								</derby.stream.error.file>
							</systemPropertyVariables>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<properties>
		<endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<repoUrl>https://repo.icatproject.org/repo</repoUrl>
		<project.scm.id>github</project.scm.id>
		<icatSchemaVersionDoc>4.6.0-SNAPSHOT</icatSchemaVersionDoc>
	</properties>

	<repositories>
		<repository>
			<id>ICAT Repo</id>
			<url>https://repo.icatproject.org/repo</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>miredot</id>
			<name>MireDot Releases</name>
			<url>http://nexus.qmino.com/content/repositories/miredot</url>
		</pluginRepository>
	</pluginRepositories>

	<scm>
		<connection>scm:git:https://github.com/icatproject/topcat.git</connection>
		<developerConnection>scm:git:https://github.com/icatproject/topcat.git</developerConnection>
		<url>https://github.com/icatproject/topcat</url>
		<tag>HEAD</tag>
	</scm>


	<issueManagement>
		<url>https://github.com/icatproject/topcat/issues</url>
		<system>GitHub</system>
	</issueManagement>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
		</license>
	</licenses>

	<organization>
		<name>The ICAT Collaboration</name>
		<url>http://www.icatproject.org</url>
	</organization>

	<distributionManagement>
		<downloadUrl>https://repo.icatproject.org/repo</downloadUrl>
		<site>
			<id>repo.icatproject.org</id>
			<url>dav:https://repo.icatproject.org/site/topcat/${project.version}</url>
		</site>
		<repository>
			<id>repo.icatproject.org</id>
			<url>dav:https://repo.icatproject.org/repo</url>
		</repository>
	</distributionManagement>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>2.8.1</version>
				<configuration>
					<dependencyLocationsEnabled>false</dependencyLocationsEnabled>
				</configuration>
				<reportSets>
					<reportSet>
						<reports>
							<report>index</report>
							<report>summary</report>
							<report>dependencies</report>
							<report>issue-tracking</report>
							<report>license</report>
							<report>plugins</report>
							<report>scm</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>

		</plugins>
	</reporting>
</project>

